[gd_scene load_steps=22 format=3 uid="uid://dwh0mfn58tjlg"]

[ext_resource type="Texture2D" uid="uid://bdwf7jolhtlsm" path="res://assets/graphics/NinjaGreen/SpriteSheet.png" id="1_6viuf"]
[ext_resource type="Script" uid="uid://snqu63duwyuc" path="res://scripts/player.gd" id="1_fmuf1"]
[ext_resource type="Resource" uid="uid://ccyfjbshqwjjt" path="res://scripts/inventory/playerInventory.tres" id="2_3li8b"]
[ext_resource type="Script" uid="uid://dd6qiy6wifmkk" path="res://scripts/weapon.gd" id="4_tpg5x"]
[ext_resource type="Script" uid="uid://btf63kp3fiiyg" path="res://components/move_animation_component.gd" id="6_c3xxp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpjcp"]
size = Vector2(11.5, 4)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v6fml"]
radius = 7.5
height = 15.0

[sub_resource type="Animation" id="Animation_3li8b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_v6fml"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.498039), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mdl7e"]
_data = {
&"RESET": SubResource("Animation_3li8b"),
&"hurtBlink": SubResource("Animation_v6fml")
}

[sub_resource type="Animation" id="Animation_qu4a1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0944]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tpg5x"]
resource_name = "attackDown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0944, 4.18879]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, 7), Vector2(0, 10), Vector2(-6, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(2, 6)]
}

[sub_resource type="Animation" id="Animation_npwbq"]
resource_name = "attackLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-2.18166, -0.872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-6.75, 8), Vector2(-10, 3.5), Vector2(-6, -6.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(2, 6), Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_v42im"]
resource_name = "attackRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.18166, 0.872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6.75, 8), Vector2(10, 3.5), Vector2(6, -6.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 2), Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_c3xxp"]
resource_name = "attackUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.0472, 1.0472]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-7, -5), Vector2(0, -7.25), Vector2(6, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(1, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bruh7"]
resource_name = "pickItem"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 6), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_mdl7e"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_cw2d6"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_khinc"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_70d11"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bruh7"]
_data = {
&"RESET": SubResource("Animation_qu4a1"),
&"attackDown": SubResource("Animation_tpg5x"),
&"attackLeft": SubResource("Animation_npwbq"),
&"attackRight": SubResource("Animation_v42im"),
&"attackUp": SubResource("Animation_c3xxp"),
&"pickItem": SubResource("Animation_bruh7"),
&"walkDown": SubResource("Animation_mdl7e"),
&"walkLeft": SubResource("Animation_cw2d6"),
&"walkRight": SubResource("Animation_khinc"),
&"walkUp": SubResource("Animation_70d11")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
scale = Vector2(4, 4)
collision_layer = 9
script = ExtResource("1_fmuf1")
inventory = ExtResource("2_3li8b")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("1_6viuf")
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -19.0
offset_top = -18.5
offset_right = 21.0
offset_bottom = 21.5
color = Color(1, 0, 0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_kpjcp")

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 0.75)
shape = SubResource("CapsuleShape2D_v6fml")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mdl7e")
}

[node name="hurtTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bruh7")
}

[node name="weapon" type="Node2D" parent="."]
visible = false
position = Vector2(6, 7)
rotation = 2.0944
script = ExtResource("4_tpg5x")

[node name="MoveAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("animations")]
script = ExtResource("6_c3xxp")
animations = NodePath("../AnimationPlayer")
metadata/_custom_type_script = "uid://btf63kp3fiiyg"

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_hurt_box_area_exited"]
